# melehova_trainings

./: CMakeLists.txt
task_1-BizzBuss/: README.md  bizz_buss.c  input.txt
task_2-BadHashTable/: hashtable.c
task_2-BadHashTable/BFM/: brain_fuck_machine.c
task_2-BadHashTable/HASH/: hashfunction.c  hashfunction.h  hashfunction_bfm.c  hashfunction_bfm.h  test_bfm.c  test_hashes.c
task_3-FixBugs/: dokhlopkov_checked_dvodopian_fix_bugs.cpp  dokhlopkov_lesson3_fix_bugs_2.cpp  fix_bugs.cpp  lesson3_fix_bugs.cpp
task_3-measure-getc/: test_1.c  test_1.txt  test_1000.c  test_30.c  test_30.txt  test_5.c  test_5.txt  test_n.c
task_4-loglib/: loglib.c  loglib.h  main.c
